--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "tsc",
+    "build": "tsc && xcopy .\\public\\*.html .\\dist\\public\\ /Y",
     "watch": "tsc -w"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.18",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.1"
